force-app/main/default/objects/sumoapp__ResourcePool__c/sumoapp__ResourcePool__c.object-meta.xml
<CustomObject>
    <label>SUMO Resource Pool</label>
    <nameField>
        <label>Resource Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Resource Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>