force-app/main/default/objects/sumoapp__ResourcePool__c/fields/sumoapp__MemberType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MemberType__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USERS</fullName>
                <label>Users</label>
            </value>
            <value>
                <fullName>PROFILES</fullName>
                <label>Profiles</label>
            </value>
            <value>
                <fullName>GROUPS</fullName>
                <label>Groups</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>