force-app/main/default/objects/sumoapp__ResourcePool__c/fields/sumoapp__NumOfUsers__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__NumOfUsers__c</fullName>
    <label>Number of Users</label>
    <summaryForeignKey>sumoapp__ResourcePoolMember__c.sumoapp__ResourcePool__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>