force-app/main/default/objects/sumoapp__ResourcePool__c/fields/sumoapp__PriorityAssignmentMode__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PriorityAssignmentMode__c</fullName>
    <label>Priority Based Assignment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sumoapp__AssignmentMode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOAD_BALANCE</fullName>
                <label>Load-Balance</label>
            </value>
            <value>
                <fullName>ROUND_ROBIN</fullName>
                <label>Round-Robin</label>
            </value>
            <value>
                <fullName>RANDOM</fullName>
                <label>Random</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>