force-app/main/default/objects/sumoapp__ResourcePool__c/fields/sumoapp__PriorityBasedNextXDays__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PriorityBasedNextXDays__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Priority Based Next [X] days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>