force-app/main/default/objects/sumoapp__ResourcePool__c/fields/sumoapp__ShowPriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ShowPriorityLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Priority Level</label>
    <type>Checkbox</type>
</CustomField>