force-app/main/default/objects/sumoapp__ResourcePool__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__AssignmentMode__c</columns>
    <columns>sumoapp__NumOfUsers__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All SUMO Resource Pools</label>
</ListView>